--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 PSET1 
 
-Trabalho realizado por **Arthur Rocco** na disciplina de **Design e Desenvolvimento de Banco de Dados I.**
-- **Professor: Abrantes**
+Trabalho realizado por **Arthur Rocco** na disciplina de Design e Desenvolvimento de Banco de Dados I.
+**Professor: Abrantes**
 
 ## Repositório
 
